got the header aligned, fixed the contact box and made general readability improvments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,25 +7,20 @@
 header {
   width: 100%;
   height: 50px;
-  line-height: 50px;
-  text-align: right;
-  padding-right: 50px;
   background-color: rgb(1, 65, 33);
   border-bottom: 10px solid rgb(9, 96, 70);
   position: fixed;
   top: 0;
 }
+header div {
+  margin-right: 20px;
+  float: right;
+}
 
-footer {
-  width: 100%;
-  height: 25px;
-  line-height: 25px;
-  background-color: rgb(1, 65, 33);
-  position: fixed;
+header div ul li {
+  display: inline-block;
+  margin-left: 25px;
   color: white;
-  bottom: 0;
-  border-top: 10px solid rgb(9, 96, 70);
-  text-align: center;
 }
 
 body {
@@ -48,21 +43,16 @@ h1 {
   margin: auto;
 }
 
-#header-font {
-  color: white;
-}
-
-#contact-box-text {
-  text-align: center;
-  z-index: 1;
-  color: bisque;
-  display: block;
-
-}
 .body-text {
   text-align: center;
   position: relative;
   top: 250px;
+}
+
+.no-bullets {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 .contact-box {
@@ -70,12 +60,15 @@ h1 {
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  height: 400px;
-  top: 275px;
-  padding-top: 50px;
+  border: 10px solid rgb(227, 197, 156);
+  border-radius: 25px;
+  height: 200px;
+  top: 300px;
+  padding-top: 5px;
   background-color: rgb(9, 96, 70);
-  width: 100%;
+  width: 40%;
   color: bisque;
+  display: block;
 }
 
 input[type="submit"] {
@@ -85,4 +78,16 @@ input[type="submit"] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+footer {
+  width: 100%;
+  height: 25px;
+  line-height: 25px;
+  background-color: rgb(1, 65, 33);
+  position: fixed;
+  color: white;
+  bottom: 0;
+  border-top: 10px solid rgb(9, 96, 70);
+  text-align: center;
 }
